--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*Google font*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 /*------------ Browser rest/default style starts----------*/
@@ -7,6 +8,7 @@
   --light-gray-color: #ddd;
 }
 
+/* Universal style */
 * {
   padding: 0;
   margin: 0;
